--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -36,11 +36,14 @@
   <body style = "background-image: linear-gradient(to left, DarkBlue, LightGray)">
   <h1 style = "text-align:center; background-color: gray"> Textbook Bazaar </h1>
   <ul>
-    <li><a href="http://csc415-server21.hpc.tcnj.edu:3000">Home</a></li>
-    <li><a href="http://csc415-server21.hpc.tcnj.edu:3000/browse/index">Browse Textbooks</a></li>
-    <li><a href="http://csc415-server21.hpc.tcnj.edu:3000/sell/index">Sell a Textbook</a></li>
+    <li><%= link_to "Home", welcome_path_url%>> </li>
+    <li><%= link_to "Browse Textbooks", browse_path_url%>></li>
+    <li><%= link_to ">Sell a Textbook", sell_path_url%></li>
     <li><a href="https://github.com/EStaiman/TCNJ-Bazaar/wiki">About</a></li>
-    <li><a href="http://csc415-server21.hpc.tcnj.edu:3000/contact/index"> Contact </a></li>
+    <li><%= link_to "Contact", contact_path_url%></li>
+    <% if current_user%>
+    <li><%= link_to "Logout", logout_path%></li>
+    <% end %>
   </ul>
   <%= yield %>
   </body>
