--- a/src/app/views/users/profile.html.erb
+++ b/src/app/views/users/profile.html.erb
@@ -2,13 +2,13 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @user.name %>
+  <%= current_user.name %>
 </p>
 
 <p style = "white-space: pre-line">
   <strong>Message:</strong>
-  <%= @user.message %>
+  <%= current_user.message %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(current_user) %>
+
