--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
     <li><a href="https://github.com/EStaiman/TCNJ-Bazaar/wiki">About</a></li>
     <li><%= link_to "Contact", contact_path_url%></li>
     <% if current_user%>
+    <li><%= link_to "Profile", profile_path_url %> </li>
     <li><%= link_to "Logout", logout_path%></li>
     <% end %>
   </ul>
