--- a/src/app/views/textbooks/offer.html.erb
+++ b/src/app/views/textbooks/offer.html.erb
@@ -30,9 +30,9 @@
   <%= @textbook.price %>
 </p>
 
-<% if current_user && (current_user.name == @textbook.user || @textbook.id == 4) %>
-  <%= link_to 'Edit', edit_textbook_path(@textbook) %>
-<% else %>
-  <%= link_to "Make an Offer", offer_path_url %>
+<%= form_tag(offer_path_url, method: :get) do %>
+    <%= text_field_tag(:offer, params[:offer]) %>
+    <%= submit_tag ("Offer") %>
 <% end %>
-<%= link_to 'Back', textbooks_path %>
+
+<%= link_to 'Cancel Offer', textbooks_path %>
