--- a/src/app/views/users/_form.html.erb
+++ b/src/app/views/users/_form.html.erb
@@ -14,7 +14,9 @@
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
-
+    
+    <%= form.label :message %>
+    <%= form.text_field :message %>
   </div>
 
   <div class="actions">
