--- a/src/app/views/users/profile.html.erb
+++ b/src/app/views/users/profile.html.erb
@@ -12,3 +12,36 @@
 
 <%= link_to 'Edit', edit_user_path(current_user) %>
 
+
+<table style = "margin-left: auto; margin-right: auto">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Author</th>
+      <th>Edition</th>
+      <th>Condition</th>
+      <th>Price</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @textbooks.each do |textbook| %>
+     <% if textbook.user == current_user.name %>
+        <tr>
+        <td><%= link_to textbook.name, textbook %></td>
+	<td><%= textbook.author %></td>
+        <td><%= textbook.edition %></td>
+        <td><%= textbook.condition %></td>
+        <td><%= textbook.price %></td>
+        <% if current_user && (current_user.name == textbook.user || current_user.id == 4) %>
+          <td><%= link_to 'Edit', edit_textbook_path(textbook) %></td>
+          <td><%= link_to 'Destroy', textbook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<% end %>
+      </tr>
+<%end %>
+    
+    <% end %>
+  </tbody>
+</table>
+</div>
