Peer Review Feedback

--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body style = "background-image: linear-gradient(to left, DarkBlue, LightGray)">
+  <body style = "background-image: linear-gradient(to left, Blue, LightGray)">
   <h1 style = "text-align:center"> Textbook Bazaar </h1>
   <ul>
     <li><%= link_to "Home", welcome_path_url%>> </li>
